--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,5 +1,4 @@
-// src/app/app.html
-`<div class="app-container">
+<div class="app-container">
   <header class="header">
     <div class="container">
       <h1 class="logo">{{ companyName() }}</h1>
