--- a/src/app/app.html
+++ b/src/app/app.html
@@ -2,10 +2,10 @@
   <header class="header">
     <div class="container">
       <h1 class="logo">{{ companyName() }}</h1>
-      <nav class="nav">
+      <!-- <nav class="nav">
         <a routerLink="/login" class="nav-link" routerLinkActive="active">Admin Login</a>
         <a routerLink="/user-login" class="nav-link" routerLinkActive="active">User Login</a>
-      </nav>
+      </nav> -->
     </div>
   </header>
   
