--- a/src/app/components/admin-register/admin-register.html
+++ b/src/app/components/admin-register/admin-register.html
@@ -218,9 +218,9 @@
     </form>
 
     <div class="card-footer">
-      <p>Already have an account? 
+      <!-- <p>Already have an account? 
         <a routerLink="/login" class="login-link">Sign in here</a>
-      </p>
+      </p> -->
     </div>
   </div>
 </div>
