--- a/src/app/components/admin-login/admin-login.component.html
+++ b/src/app/components/admin-login/admin-login.component.html
@@ -35,7 +35,7 @@
     </form>
 
     <div class="card-footer">
-      <p>Don't have an admin account? <a routerLink="/register">Register here</a></p>
+      <!-- <p>Don't have an admin account? <a routerLink="/register">Register here</a></p> -->
     </div>
   </div>
 </div>
